<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AcercadeFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/acerca_txt1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:background="@color/tabtextcolor"
        android:paddingLeft="15dp"
        android:paddingTop="4dp"
        android:paddingRight="15dp"
        android:text="@string/acerca_txt1"
        android:textColor="@color/myWhite"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/acerca_txt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="5dp"
        android:text="@string/acerca_txt2"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/acerca_txt8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:text="@string/estudiantes"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/acerca_txt3"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/tabtextcolor"
        android:paddingLeft="15dp"
        android:paddingTop="4dp"
        android:paddingRight="15dp"
        android:text="@string/acerca_txt3"
        android:textColor="@color/myWhite"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/acerca_txt4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="5dp"
        android:text="@string/acerca_txt4"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/acerca_txt5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:text="@string/info_luis"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/acerca_txt6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="5dp"
        android:text="@string/facultad"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/acerca_txt7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:text="@string/info_facultad"
        android:textSize="13sp" />

    <ImageView
        android:id="@+id/imgv_info"
        android:layout_width="wrap_content"
        android:layout_height="71dp"
        android:paddingLeft="240dp"
        android:src="@drawable/informacion" />

</LinearLayout>