<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity"
    android:background="@color/myWhite">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="107dp"
        android:layout_height="134dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoapp" />

    <EditText
        android:id="@+id/et_nomb_evento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:backgroundTint="@color/colorCarnet"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:textColor="@color/myBlack"
        android:textColorHint="#666666"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/et_fecha_evento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:backgroundTint="@color/colorCarnet"
        android:ems="10"
        android:hint="@string/apellidos"
        android:inputType="textPersonName"
        android:textColor="@color/myBlack"
        android:textColorHint="#666666"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_nomb_evento" />

    <EditText
        android:id="@+id/et_desc_evento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:backgroundTint="@color/colorCarnet"
        android:ems="10"
        android:hint="@string/txt_matricula"
        android:textColor="@color/myBlack"
        android:textColorHint="#666666"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_fecha_evento" />

    <EditText
        android:id="@+id/et_tipo_evento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:backgroundTint="@color/colorCarnet"
        android:ems="10"
        android:hint="@string/txt_contrasena"
        android:inputType="textPassword"
        android:textColor="@color/myBlack"
        android:textColorHint="#666666"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_desc_evento" />

    <TextView
        android:id="@+id/tv_registrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="84dp"
        android:text="@string/registro"
        android:textColor="@color/myBlack"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_registrar_datos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/button_rounded"
        android:onClick="registrarAlumnosSql"
        android:text="@string/registrarse_button"
        android:textColor="@color/myWhite"
        app:layout_constraintTop_toBottomOf="@+id/et_tipo_evento"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />
</android.support.constraint.ConstraintLayout>
