<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnviarFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/enviar_txt1"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:background="@color/tabtextcolor"
        android:paddingLeft="15dp"
        android:paddingTop="4dp"
        android:paddingRight="15dp"
        android:text="@string/enviar_txt1"
        android:textColor="@color/myWhite"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner_rubro"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/enviar_txt2"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/tabtextcolor"
        android:paddingLeft="15dp"
        android:paddingTop="4dp"
        android:paddingRight="15dp"
        android:text="@string/enviar_txt2"
        android:textColor="@color/myWhite"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner_evento"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:orientation="vertical">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/enviar_txt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:text="@string/enviar_txt3"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/evidencia_button"
                android:layout_width="44dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="42dp"
                android:background="@drawable/button_evidencia"
                android:src="@drawable/add_photo" />

        </TableRow>

    </LinearLayout>

    <TextView
        android:id="@+id/enviar_txt4"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/tabtextcolor"
        android:paddingLeft="15dp"
        android:paddingTop="4dp"
        android:paddingRight="15dp"
        android:text="@string/enviar_txt4"
        android:textColor="@color/myWhite"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etxt_comentario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:inputType="textMultiLine" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/enviar_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:text="@string/enviar_txt5"
        android:textColor="@color/myWhite"
        android:textSize="16sp"
        android:background="@drawable/button_rounded" />

    <Button
        android:id="@+id/registrare_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_rounded_border"
        android:text="@string/registro_evento"
        android:textColor="@color/myBlack"
        android:textSize="16sp" />
</LinearLayout>