<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoEventoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="10dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/txt_info_titulo"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@color/myWhite"
            android:paddingLeft="15dp"
            android:paddingTop="6dp"
            android:paddingRight="15dp"
            android:text="Probando"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_info_tipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="TextView"
            android:textSize="16sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tv_desc_fecha"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:layout_marginTop="13dp"
            android:background="@color/tabtextcolor"
            android:paddingLeft="15dp"
            android:paddingTop="2dp"
            android:paddingRight="15dp"
            android:text="@string/fechaa"
            android:textColor="@color/myWhite"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_info_fecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="TextView" />

        <TextView
            android:id="@+id/tv_desc_lugar"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:layout_marginTop="5dp"
            android:background="@color/tabtextcolor"
            android:paddingLeft="15dp"
            android:paddingTop="2dp"
            android:paddingRight="15dp"
            android:text="@string/lugar"
            android:textColor="@color/myWhite"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_info_lugar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="TextView" />

        <TextView
            android:id="@+id/tv_desc_desc"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:layout_marginTop="5dp"
            android:background="@color/tabtextcolor"
            android:paddingLeft="15dp"
            android:paddingTop="2dp"
            android:paddingRight="15dp"
            android:text="@string/descripcion"
            android:textColor="@color/myWhite"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_info_descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="TextView" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:layout_marginTop="50dp"
            android:background="@color/myWhite"/>

        <ImageView
            android:id="@+id/img_info"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            app:srcCompat="@drawable/interfacultades" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:background="@color/myWhite"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>